<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:padding="6dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:text="@string/education"
                android:textColor="@color/blackColor"
                android:textSize="18sp"
                app:fontFamily="@font/roboto" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/fastlogo"
                    app:layout_constraintEnd_toStartOf="@+id/textView5"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:ignore="MissingConstraints" />


                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:text="@string/university_title"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    card_view:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:text="@string/university_year"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    card_view:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:text="@string/graduation_title"
                    android:textColor="@color/blackColor"
                    android:textSize="16sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:ignore="MissingConstraints"
                    card_view:layout_editor_absoluteX="0dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>

