<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.viewpager.widget.ViewPager

        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/whiteColor"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/coverPhoto"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/grayColor"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY" />


            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="170dp"
                android:gravity="center"
                android:text="@string/user_name"
                android:textColor="@color/blackColor"
                android:textSize="22sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto" />

            <TextView
                android:id="@+id/resumeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="202dp"
                android:gravity="center"
                android:text="@string/resume_title"
                android:textColor="@color/blackColor"
                android:textSize="17sp"
                app:fontFamily="@font/roboto" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="top"
                android:layout_marginBottom="50dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="265dp"
                android:background="@color/whiteColor"
                app:fontFamily="@font/roboto"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"

                app:tabGravity="fill"
                app:tabIndicatorColor="@color/blue1Color"
                app:tabInlineLabel="true"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/blackColor"
                app:tabTextAppearance="@style/TabLayoutTextSize"
                app:tabTextColor="@color/blue1Color"

                />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile"
                android:layout_width="96dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>